--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.3.2",
+    "@astrojs/vercel": "^8.0.6",
+    "@vercel/speed-insights": "^1.1.0",
+    "astro": "^5.2.5",
     "tailwindcss": "^3.4.1"
   }
 }
