--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^8.0.6",
     "astro": "^5.2.5",
+    "resend": "^4.1.2",
     "tailwindcss": "^3.4.1"
   }
 }
